--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,11 +26,29 @@ layout: default
           </li>
           {% endfor %}
         </ul>
-        <p class="card-text"><small class="text-muted">Last updated {{ page.date }}</small></p>
+        <p class="card-text"><small class="text-muted"><i>Last updated {{ page.date }}</i></small></p>
       </div>
     </div>
   </div>
 </div>
+
+<!-- TOAST FOR DEMO PURPOSES ONLY -->
+<!-- TODO: REMOVE -->
+<!-- 
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="toast-header">
+    <img src="..." class="rounded mr-2" alt="...">
+    <strong class="mr-auto">Bootstrap</strong>
+    <small class="text-muted">11 mins ago</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    Thanks for checking out Jekyll-Theme-Dumbarton !
+  </div>
+</div>
+-->
 
 <!-- HOME HIGHLIGHTS SECTION --> 
 <h5 class="card-title text-center"></h5>
@@ -56,7 +74,7 @@ layout: default
           {% if section.first %}
             {% if section.name == "Publications" %}
               <div class="tab-pane active overflow-auto" id="{{section.id}}" role="tabpanel">
-                <h5 class="card-title text-center">{{section.description}}</h5>
+                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="r-link link text-underlined">{{section.description}}</a></h5>
                 <p class="card-text">{% bibliography -f papers %}</p>
               </div>
             {% else %}
@@ -67,12 +85,12 @@ layout: default
           {% else %}  
             {% if section.name == "Presentations" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center">{{section.description}}</h5>
+                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="r-link link text-underlined">{{section.description}}</a></h5>
                 <p class="card-text">{% bibliography -f presentations %}</p>              
               </div>
             {% elsif section.name == "Projects" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center">{{section.description}}</h5>
+                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="r-link link text-underlined">{{section.description}}</a></h5>
                 <div class="row row-cols-1 row-cols-md-2">
                   {% for projects in site.data.projects %}
                     <div class="col mb-4">
@@ -89,7 +107,7 @@ layout: default
               </div>
             {% elsif section.name == "Courses" %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center">{{section.description}}</h5>
+                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="r-link link text-underlined">{{section.description}}</a></h5>
                 <div class="row">
                   <div class="col-4">
                     <div class="list-group" id="list-tab" role="tablist">
@@ -109,7 +127,7 @@ layout: default
               </div>
             {% else %}
               <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center">{{section.description}}</h5>
+                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="r-link link text-underlined">{{section.description}}</a></h5>
                 <p class="card-text">{{ section.content }} </p>              
               </div>
             {% endif %}
