--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,9 @@
 {% elsif site.nav-color == "transparent"  %}
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
 {% else %}
+{% elsif site.nav-color == "primary"  %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+{% else %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 {% endif %}
   <!-- Optional Icon
@@ -29,11 +32,10 @@
         {% include social.html %}
       </li>
     </ul>
-    <!--
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
+      <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
+      <button class="btn btn-dark  btn-sm my-2 my-sm-0" type="submit">Search</button>
+    </form> 
     
   </div>
 </nav>
