--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,7 @@
 <!-- Displays Social Media Icons based on _config.yml settings -->
 
 {{ if site.twitter }}
+<i> &nbsp;&nbsp; </i>
 <a class="social-link" href="https://twitter.com/{{ site.twitter }}"><i class="fab fa-twitter-square fa-lg"></i></a>
 {{ elseif site.github }}
 <a href="https://github.com/{{ site.github }}"><i class="fab fa-github-square fa-lg"></i></a>
@@ -10,4 +11,5 @@
 <a href="https://codepen.io/{{ site.codepen }}"><i class="fab fa-codepen fa-lg"></i></a>
 {{ elseif site.stackoverflow }}
 <a href="https://stackoverflow.com/users/story/{{ site.stackoverflow }}"><i class="fab fa-stack-overflow fa-lg"></i></a>
+<i> &nbsp;&nbsp; </i>
 {{ endif }}
