update google font api integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,8 +49,9 @@
 <!-- meta name="geo.placename" content="city/town"><eg. content="New York City" -->
 
 <!-- Link to an external CSS file -->
+<link href="https://fonts.googleapis.com/css2?family={{ site.google-font }}&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -96,8 +97,8 @@
 <!-- Used for adding in-document CSS -->
 <style>
 body {
-        font-family: '{{ site.font }}', serif;
-      }
+  font-family: '{{ site.google-font-name }}', cursive;
+}
 </style>
 
 
