update demo color scheme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,18 @@
+{% if site.color-scheme=="demo" %}
+<footer class="footer" style="background-color: #00334e;">
+    <div class="container">
+     <span class="text-white">{{ site.title }}</span>
+        {% include social.html %}
+    </div>
+</footer>
+{% else %}
 <footer class="footer">
     <div class="container">
      <span class="text-muted">{{ site.title }}</span>
         {% include social.html %}
     </div>
 </footer>
+{% endif %}
 
 <script>
   $(function () {
