--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
 <!-- meta name="geo.placename" content="city/town"><eg. content="New York City" -->
 
 <!-- Link to an external CSS file -->
-<link href="https://fonts.googleapis.com/css2?family={{ site.google-font }}&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family={{ site.google-font }}&family=Parisienne&family=Courgette&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/main.css">
 <!-- BootStrap CDN --> 
