--- a/css/main.css
+++ b/css/main.css
@@ -17,78 +17,18 @@ html {
   }
 
 
-
-/*
-=====
-DEPENDENCIES
-=====
-*/
-
-.r-link{
-	display: var(--rLinkDisplay, inline-flex) !important;
+a.highlighted, a.highlighted:link {
+  color: black;
+  text-decoration: none;
+  background-position-y: -0%;
+  background-image: linear-gradient( white 50%, gold 50%);
+  transition: background 500ms ease;
+  background-size: 2px;
+  background-size: auto 175%;
 }
 
-.r-link[href]{
-	color: var(--rLinkColor) !important;
-	text-decoration: var(--rLinkTextDecoration, none) !important;
-}
-
-.text-underlined{
-    /*
-        1. I use pixels units because others units (em, rem, vw, vh, etc) can
-        lead to the mistake of displaying a circumcised line
-    */
-
-    --uiTextUnderlinedLineHeight: var(--textUnderlinedLineHeight, 2px); /* 1 */
-    --uiTextUnderlinedLineGap: var(--textUnderlinedLineGap, .5rem);
-    --uiTextUnderlinedPaddingBottom: calc(var(--uiTextUnderlinedLineHeight) + var(--uiTextUnderlinedLineGap));
-
-    padding-bottom: var(--uiTextUnderlinedPaddingBottom) !important;
-    position: var(--textUnderlinedPosition, relative) !important;
-		z-index: var(--textUnderlinedZindex, 1) !important;
-}
-
-.text-underlined::after{
-    content: "";
-    width: var(--textUnderlinedLineWidht, 100%) !important;
-    height: var(--uiTextUnderlinedLineHeight) !important;
-		background-image: var(--textUnderlinedBackgroundImage, linear-gradient(to top, var(--textUnderlinedLineColor, currentColor) 30%, rgba(0, 0, 0, 0) 45%)) !important;
-
-    position: absolute;
-    left: var(--textUnderlinedLineLeft, 0) !important;
-    bottom: var(--textUnderlinedLineBottom, 0) !important;
-		z-index: var(--textUnderlinedLineZindex, -1) !important;
-}
-
-/*
-=====
-CORE
-=====
-*/
-
-.link{
-	--textUnderlinedLineHeight: 100%;
-	--textUnderlinedLineGap: 0;
-	--textUnderlinedLineColor: #5588a3;
-	
-	padding-left: .75rem;
-	padding-right: .75rem;
-}
-
-.link::after{
-	will-change: width;
-	transition: width .1s ease-out;
-	transform: rotate(-2deg);
-	transform-origin: left bottom;
-}
-
-.link:hover{
-	--textUnderlinedLineWidht: 0;
-}
-
-.link:hover::after{
-	transition-duration: .15s;
-}
+a.highlighted:hover {
+  background-position-y: 100%;
 
 
   /* Custom page CSS
