--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 {% if site.color-scheme=="demo" %}
 <footer class="footer" style="background-color:{{ site.demo-color }};">
     <div class="container">
-     <span class="text-white">{{ site.title }}</span>
+     <span class="text-white" style="font-family:Courgette;">{{ site.title }}</span>
         {% include social.html %}
     </div>
 </footer>
 {% else %}
 <footer class="footer">
     <div class="container">
-     <span class="text-dark">{{ site.title }}</span>
+       <span class="text-white" style="font-family:Courgette;">{{ site.title }}</span>
         {% include social.html %}
     </div>
 </footer>
