--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
   <a href="/index.html"><img src="/assets/img/icons/favicon.ico" class="dumbarton-icon"></a>
   -->
 {% if site.nav-color == "demo"  %}
-  <a class="navbar-brand text-white" href="/index.html" style="font-family:Courgette;">{{ site.title }}</a>
+  <a class="navbar-brand text-white" href="/index.html"><h4 style="font-family:Courgette;">{{ site.title }}</h4></a>
 {% else %}
   <a class="navbar-brand" href="/index.html">{{ site.title }}</a>
 {% endif %}
